--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@angular/router": "^4.0.0",
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
-    "class-transformer": "^0.1.8",
     "core-js": "^2.4.1",
     "electron-ipc-server": "^0.1.2",
+    "electron-spawn": "^5.0.0",
+    "express": "^4.16.2",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.1.0",
+    "trakt.tv": "^6.0.1",
     "webtorrent": "^0.98.20",
+    "yify-search": "^1.0.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
