--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "run": "electron .",
     "start": "concurrently \"webpack-dev-server --port=4200\" \"electron src/entry.live.js\"",
+    "express": "concurrently \"webpack --watch\" \"electron src/entry.express.js\"",
     "ng": "ng",
     "build": "webpack",
     "test": "karma start ./karma.conf.js",
@@ -28,21 +29,19 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "axios": "^0.17.0",
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
     "core-js": "^2.4.1",
-    "electron-ipc-server": "^0.1.2",
-    "electron-spawn": "^5.0.0",
     "express": "^4.16.2",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.1.0",
     "trakt.tv": "^6.0.1",
     "webtorrent": "^0.98.20",
-    "yify-search": "^1.0.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
+    "@angular/cli": "1.4.9",
     "@angular/compiler-cli": "^4.0.0",
     "@ngtools/webpack": "^1.3.0",
     "@types/electron": "^1.4.35",
