--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,13 @@
   "configurations": [
 
     {
-      "name": "Debug Main Process",
+      "type": "node",
+      "request": "launch",
+      "name": "Express server",
+      "program": "${workspaceFolder}/src/server.js"
+    },
+    {
+      "name": "Electron",
       "type": "node",
       "request": "launch",
       "cwd": "${workspaceRoot}",
@@ -11,7 +17,7 @@
       "windows": {
         "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
       },
-      "args" : ["src/entry.express.js"]
+      "args": ["src/entry.express.js"]
     }
   ]
 }
