--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.1.0",
     "trakt.tv": "^6.0.1",
+    "underscore": "^1.8.3",
     "webtorrent": "^0.98.20",
     "zone.js": "^0.8.4"
   },
