--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "axios": "^0.17.0",
+    "bluebird": "^3.5.1",
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
+    "cachios": "^1.0.7",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "ngx-bootstrap": "^1.7.1",
