Solar scrape api

--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angular-io-slimscroll": "^1.2.11",
+    "asyncawait": "^1.0.6",
     "axios": "^0.17.0",
     "bluebird": "^3.5.1",
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
     "cachios": "^1.0.7",
+    "cheerio": "^1.0.0-rc.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "ngx-bootstrap": "^1.7.1",
