--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "run": "electron .",
     "start": "concurrently \"webpack-dev-server --port=4200\" \"electron src/entry.live.js\"",
     "express": "concurrently \"webpack --watch\" \"electron src/entry.express.js\"",
+    "electron": "electron src/entry.express.js --harmony-async-await ",
     "ng": "ng",
     "build": "webpack",
     "watch": "webpack --watch",
@@ -31,7 +32,6 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angular-io-slimscroll": "^1.2.11",
-    "asyncawait": "^1.0.6",
     "axios": "^0.17.0",
     "bluebird": "^3.5.1",
     "bootstrap": "^3.3.7",
@@ -40,6 +40,7 @@
     "cheerio": "^1.0.0-rc.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "idope-search": "^1.0.0",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.1.0",
     "trakt.tv": "^6.0.1",
