--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-cli": "^1.0.0-beta.28.3",
     "angular-io-slimscroll": "^1.2.11",
     "axios": "^0.17.0",
     "bluebird": "^3.5.1",
@@ -41,6 +42,7 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "idope-search": "^1.0.0",
+    "ng2-slim-loading-bar": "^4.0.0",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.1.0",
     "trakt.tv": "^6.0.1",
@@ -50,7 +52,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.9",
+    "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
     "@ngtools/webpack": "^1.3.0",
     "@types/electron": "^1.4.35",
