--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "^4.0.0",
     "angular-cli": "^1.0.0-beta.28.3",
     "angular-io-slimscroll": "^1.2.11",
+    "angular2-http-interceptor": "^4.0.0",
     "axios": "^0.17.0",
     "bluebird": "^3.5.1",
     "bootstrap": "^3.3.7",
