--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "idope-search": "^1.0.0",
+    "nedb": "^1.8.0",
+    "nedb-promise": "^2.0.1",
     "ng2-slim-loading-bar": "^4.0.0",
     "ngx-bootstrap": "^1.7.1",
     "puppeteer": "^0.13.0",
