--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "idope-search": "^1.0.0",
     "nedb": "^1.8.0",
     "nedb-promise": "^2.0.1",
+    "ng-socket-io": "^0.2.0",
     "ng2-slim-loading-bar": "^4.0.0",
     "ngx-bootstrap": "^1.9.3",
     "puppeteer": "^0.13.0",
     "rxjs": "^5.1.0",
+    "socket.io": "^2.0.4",
     "trakt.tv": "^6.0.1",
     "underscore": "^1.8.3",
     "video.js": "^6.2.8",
