--- a/package.json
+++ b/package.json
@@ -106,5 +106,6 @@
     "url-loader": "^0.5.7",
     "webpack": "^2.3.2",
     "webpack-dev-server": "~2.3.0"
-  }
+  },
+  "bundledDependencies": ["express"]
 }
